--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
 }
 
 section {
@@ -16,9 +17,75 @@ section {
 
 header {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    min-height: 82px;
+    padding: 16px 56px;
+}
 
+nav ul li{
+    display: inline-block;
+    cursor: pointer;
+    font-weight: 600;
+    color: #fafafa;
+}
+
+li + li {
+    margin-left: 32px;
+}
+
+.botao {
+    background: linear-gradient(150.53deg, #FFE45C 0%, #FFC900 100%);
+    padding: 16px;
+    border-radius: 1.5rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    color: #242424;
+    font-size: 14px;
+    flex: 0 0 25%;
+    max-width: 25%;
+    font-weight: 500; 
 }
 
 .container {
-    max-width: 960;
+    max-width: 960px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.link-desconto {
+    display: flex;
+    align-items: center;
+    margin-top: -8px;
+    margin-bottom: 48px;
+    color: #fafafa;
+    border: 1px solid rgba(250, 250, 250, 0.35);
+    border-radius: 24px;
+    padding: 8px 16px 8px 8px;
+    text-decoration: none;
+    background-color: rgba(36, 36, 36, 0.6);
+    cursor: pointer;
+    font-size: 0.875rem;
+}
+
+.link-desconto span {
+    background-color: #006d8f;
+    color: #fafafa;
+    font-size: 0.875rem;
+    border-radius: 20px;
+    height: 24px;
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    font-weight: 600;    
+}
+
+.link-desconto strong {
+    margin-left: 8px;
 }
