--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,19 @@ header {
     padding: 16px 56px;
 }
 
+nav {
+    display: flex;
+    height: 80px;
+    align-items: center;
+    margin-bottom: -80px;
+}
+
 nav ul li{
     display: inline-block;
     cursor: pointer;
     font-weight: 600;
     color: #fafafa;
+    font-size: 1rem;
 }
 
 li + li {
@@ -57,17 +65,19 @@ li + li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .link-desconto {
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    margin-top: -8px;
+    margin-top: 72px;
     margin-bottom: 48px;
     color: #fafafa;
     border: 1px solid rgba(250, 250, 250, 0.35);
     border-radius: 24px;
-    padding: 8px 16px 8px 8px;
+    padding: 8px 24px 8px 8px;
     text-decoration: none;
     background-color: rgba(36, 36, 36, 0.6);
     cursor: pointer;
@@ -83,9 +93,59 @@ li + li {
     padding: 0 8px;
     display: flex;
     align-items: center;
-    font-weight: 600;    
+    font-weight: 600;
 }
 
 .link-desconto strong {
     margin-left: 8px;
+}
+
+h1 {
+    padding: 0;
+    line-height: 1.11;
+    margin-bottom: 24px;
+    font-size: calc(32px + (72 - 32) * ((100vw - 0px) / (1920 - 0)));
+    color: #ffffff;
+    max-width: 75%
+}
+
+h2 {
+    padding: 0;
+    color: rgb(250, 250, 250);
+    font-size: 1.5rem;
+    line-height: 1.33;
+    font-weight: normal;
+    max-width: 83.33333333%;
+}
+
+h2 span {
+    display: block;
+}
+
+.botao-produtos {
+    margin-top: 32px;
+    max-width: 340px;
+    border: 1px solid hsla(0, 0%, 98%, 0.35);
+    background-color: hsla(0, 0%, 98%, 0.1);
+    display: block;
+    text-align: center;
+    font-size: 0.875rem;
+    font-weight: 500;
+    min-width: 64px;
+    box-sizing: border-box;
+    width: 100%;
+    color: #fff;
+    padding: 12px;
+    line-height: 1.75;
+    border-radius: 1.5rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.botao-produtos:hover {
+    border-color: hsla(0, 0%, 98%, 1);
+    background-color: hsla(0, 0%, 98%, 0.1);
+    box-shadow: none;
+    text-decoration: none;
 }
