--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    overflow-y: scroll;
 }
 
 section {
@@ -33,15 +34,17 @@ nav {
     margin-bottom: -80px;
 }
 
-nav ul li{
+.navegacao li{
     display: inline-block;
+    position: relative;
     cursor: pointer;
     font-weight: 600;
     color: #fafafa;
     font-size: 1rem;
+    padding: 16px 0;
 }
 
-li + li {
+.navegacao-li + .navegacao-li {
     margin-left: 32px;
 }
 
@@ -56,7 +59,8 @@ li + li {
     font-size: 14px;
     flex: 0 0 25%;
     max-width: 25%;
-    font-weight: 500; 
+    font-weight: 500;
+    z-index: 11;
 }
 
 .container {
@@ -67,6 +71,8 @@ li + li {
     justify-content: space-between;
     padding-left: 24px;
     padding-right: 24px;
+    padding-bottom: 64px;
+    height: 100%;
 }
 
 .link-desconto {
@@ -98,6 +104,11 @@ li + li {
 
 .link-desconto strong {
     margin-left: 8px;
+}
+
+.link-desconto:hover {
+    border-color: hsla(0, 0%, 98%, 1);
+    background-color: hsla(0, 0%, 98%, 0.1);
 }
 
 h1 {
@@ -146,6 +157,44 @@ h2 span {
 .botao-produtos:hover {
     border-color: hsla(0, 0%, 98%, 1);
     background-color: hsla(0, 0%, 98%, 0.1);
-    box-shadow: none;
+}
+
+.links {
+    top: 100%;
+    left: -16px;
+    width: 300px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: absolute;
+    background: #FFF;
+    max-height: 0;
+    transition: max-height 375ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 8px;
+    z-index: 10;
+}
+
+.navegacao-li:hover .links{
+    box-shadow: 0 0 0 99999px rgba(0,0,0,.3);
+    max-height: 1000px;
+    overflow: visible;
+}
+
+.links li{
+    width: 100%;
+    padding: 16px 0;
+}
+
+.links li:hover{
+    border-radius: 8px;
+    background-color: #f5f5f5;
+}
+
+.links li a{
+    padding: 0px 24px;
+    line-height: 1.5;
+    color: #242424;
     text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
 }
