--- a/styles.css
+++ b/styles.css
@@ -72,22 +72,50 @@ nav {
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 64px;
+    padding-top: 16px;
     height: 100%;
 }
+
 
 .link-desconto {
     display: inline-flex;
     align-items: center;
-    margin-top: 72px;
+    margin-top: 88px;
     margin-bottom: 48px;
     color: #fafafa;
     border: 1px solid rgba(250, 250, 250, 0.35);
     border-radius: 24px;
-    padding: 8px 24px 8px 8px;
+    padding: 8px 16px 8px 8px;
     text-decoration: none;
     background-color: rgba(36, 36, 36, 0.6);
     cursor: pointer;
     font-size: 0.875rem;
+}
+@media (min-width:0px) and (max-width:959.95px) {
+    .link-desconto {
+        margin-top: 320px;
+        font-size: 0.75rem;
+        max-width: 560px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
+.texto-botao-desconto{
+    display: inline-flex;
+    align-items: center;
+}
+
+@media (min-width:0px) and (max-width:959.95px){
+    .texto-botao-desconto{
+        display: inline-block;
+    }
+}
+
+@media (min-width:0px) and (max-width:959.95px){
+    .texto-botao-desconto p{
+        margin-left: 8px;
+    }
 }
 
 .link-desconto span {
@@ -102,7 +130,7 @@ nav {
     font-weight: 600;
 }
 
-.link-desconto strong {
+.dia-pais {
     margin-left: 8px;
 }
 
@@ -120,6 +148,12 @@ h1 {
     max-width: 75%
 }
 
+@media (min-width:0px) and (max-width:959.95px){
+    h1 {
+        max-width: 100%
+    }
+}
+
 h2 {
     padding: 0;
     color: rgb(250, 250, 250);
@@ -127,10 +161,20 @@ h2 {
     line-height: 1.33;
     font-weight: normal;
     max-width: 83.33333333%;
+    
+}
+@media (min-width:0px) and (max-width:959.95px){
+    h2{
+        max-width: 100%;
+        font-size: 1.3rem;
+        display: inline-block;
+    }
 }
 
-h2 span {
-    display: block;
+@media (min-width:960px) {
+    h2 span{
+        display: inline-block;
+    }
 }
 
 .botao-produtos {
@@ -157,6 +201,12 @@ h2 span {
 .botao-produtos:hover {
     border-color: hsla(0, 0%, 98%, 1);
     background-color: hsla(0, 0%, 98%, 0.1);
+}
+
+@media (min-width:0px) and (max-width:959.95px) {
+    .botao-produtos {
+        max-width: 960px;
+    }
 }
 
 .links {
